# wcmbot

./: AGENTS.md  Dockerfile  FEATURES.md  README.md  app.py  export_template_grid.py  pyproject.toml  requirements.txt  setup.sh  versioneer.py
.github/workflows/: hfsync.yml  test.yml
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
media/templates/: templates.json
tests/: test_app_helpers.py  test_gradio.py  test_matcher_functional.py  test_multipiece_gpu_workflow.py  test_torch_backend.py
wcmbot/: _version.py  bench_matcher.py  matcher.py  multipiece.py  solving.py  template_settings.py  viz.py
