[build-system]
requires = ["setuptools", "versioneer[toml]==0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "wcmbot"
description = "Jigsaw puzzle solver with AI-powered piece matching"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
    "Pillow",
    "opencv-python",
    "numpy",
    "gradio",
    "plotly",
    "torch",
    "rembg[cpu]",
]

[project.urls]
repository = "https://github.com/wcmbotanicals/wcmbot"
space = "https://huggingface.co/spaces/wcmbotanicals/wcmbot"

[project.optional-dependencies]
dev = ["ruff", "pytest", "playwright", "pytest-playwright", "versioneer[toml]"]
gpu = ["rembg[gpu]"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "wcmbot/_version.py"
versionfile_build = "wcmbot/_version.py"
tag_prefix = "v"
parentdir_prefix = "wcmbot-"

[tool.setuptools]
packages = ["wcmbot"]
